<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="edit_email"
        android:title="@string/pref_title_email"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="edit_name"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    <ee.metingapp.www.meetingapp.customelements.SeekBarPreference
        android:title="Radius in KM"
        android:key="edit_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:dsb_min="1"
        app:dsb_max="150" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ee.metingapp.www.meetingapp.customelements.ListPreferenceShowSummary
        android:key="edit_gender"
        android:title="@string/pref_title_gender"
        android:defaultValue="0"
        android:entries="@array/pref_example_list_gender"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
    <ee.metingapp.www.meetingapp.customelements.ListPreferenceShowSummary
        android:key="edit_interested_in"
        android:title="@string/pref_title_interested_in"
        android:defaultValue="0"
        android:entries="@array/pref_example_list_interested_in"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <Preference
        android:key="edit_birthdate"
        android:summary="Reschedule using current setting"
        android:title="Birthdate" />

    <Preference android:title="Update user"
        android:key="btn_update_user"/>

</PreferenceScreen>
