<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_register"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_name"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input_register_bg"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender:"
                    android:textColor="@color/input_register"
                    android:paddingTop="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Interested in:"
                    android:textColor="@color/input_register"
                    android:paddingTop="23dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Age:"
                    android:textColor="@color/input_register"
                    android:paddingTop="23dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Radius:"
                    android:textColor="@color/input_register"
                    android:paddingTop="8dp"/>

                <com.rey.material.widget.Slider
                    style="@style/Material.Widget.Slider"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:paddingTop="50dp"
                    android:layout_marginTop="50dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="center"
                    app:sl_minValue="0"
                    app:sl_maxValue="100"
                    app:sl_value="50"
                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="100dp">

                <TextView
                    android:id="@+id/txt_gender_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Man"
                    android:textColor="@color/input_register"
                    android:paddingTop="8dp"/>
                <TextView
                    android:id="@+id/txt_interest_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Woman"
                    android:textColor="@color/input_register"
                    android:paddingTop="23dp"/>
                <TextView
                    android:id="@+id/txt_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textColor="@color/input_register"
                    android:paddingTop="23dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingLeft="200dp">

            <ee.metingapp.www.meetingapp.view.SwitchButton
                android:id="@+id/btn_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>

            <ee.metingapp.www.meetingapp.view.SwitchButton
                android:id="@+id/btn_interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>

            <Button
                android:id="@+id/btn_select_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="#ea4c88"
                android:text="Birthdate"
                android:textSize="13dp"
                android:textColor="@color/white" />


            </LinearLayout>

        </RelativeLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ea4c88"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>
</LinearLayout>
